k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-backend
  template:
    metadata:
      labels:
        app: springboot-backend
    spec:
      containers:
        - name: springboot-backend
          image: ivywr/p3sc-project:backend0312a
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: springboot-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
